fix(board): use border over box-shadow in dark mode

--- a/packages/board/src/Card.scss
+++ b/packages/board/src/Card.scss
@@ -142,7 +142,13 @@
   .board-card {
     background-color: $darker;
     color: $light;
-    border-color: $dark;
+    border: solid 1px $dark;
+    box-shadow: none;
+  }
+
+  .board-card-links.attached {
+    border: solid 1px $dark;
+    box-shadow: none;
   }
 
   .title{
